<resources>
    <string name="app_name">PhotoEditor</string>
    <string name="send_photo">Опубликовать</string>
    <string name="check_friends">Отметить друзей</string>
    <string name="empty">Нет данных</string>
    <string name="progress_format">%s %%</string>

    <integer name="com_vk_sdk_AppId">5519258</integer>
    <string name="base_api_url">https://api.vk.com/</string>
    <string name="publication">Опубликовано</string>
    <string name="online">В cети</string>
    <string name="offline">Не в сети</string>
    <string name="failedLoad">Во время загрузки произошла ошибка</string>
    <string name="load_from_database">Загрузить из БД</string>
    <string name="load_from_network">Загрузить из сети</string>
    <string name="database_empty">База данных пуста</string>
    <string name="only_online">Только OnLine</string>
    <string name="save_all">Сохранить все</string>
    <string name="standart_properties">Стандартные настройки</string>
    <string name="extend_properties">Расширеные настройки</string>
    <string name="search">Найти</string>
    <string name="check">Выбрать</string>
    <string name="cancel">Отмена</string>
    <string name="select_photo">Выбрать фото</string>
    <string name="save">Сохранить</string>
    <string name="standard">Стандартные</string>
    <string name="extend">Расширенные</string>
    <string name="filter">Фильтры</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filtername">FilterName</string>
    <string name="property">Свойство</string>
    <string name="documentary">documentary</string>
    <string name="posterize">posterize</string>
    <string name="lomoish">lomoish</string>
    <string name="negative">negative</string>
    <string name="grayscale">grayscale</string>
    <string name="sepia">sepia</string>
    <string name="enter_name">Введите имя фильтра</string>
    <string name="save_filter">Сохранить</string>

</resources>
