<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white"
             android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/friends_list_progress_bar_load"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/friends_list_text_view_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_progress"
            android:visibility="gone"
            tools:text="XX %"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/friends_list_button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/save_all"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <SearchView
                android:id="@+id/friends_list_search_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/friends_list_button_search"
                style="@style/Widget.AppCompat.ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"/>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/friends_list_recycler_view_friends"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/friends_list_button_ok"
                style="@style/Widget.AppCompat.ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check"/>

            <Button
                android:id="@+id/friends_list_button_cancel"
                style="@style/Widget.AppCompat.ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"/>

        </LinearLayout>

    </LinearLayout>


    <FrameLayout
        android:id="@+id/friends_list_frame_layout_message"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="visible">

        <TextView
            android:id="@+id/friends_list_text_view_nodata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/empty"
            android:textSize="@dimen/text_progress"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/friends_list_text_view_failed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/failedLoad"
            android:textSize="@dimen/text_progress"
            android:visibility="gone"/>

    </FrameLayout>

</FrameLayout>